// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[NumberInput Component] renders Default without crashing 1`] = `
<body>
  <div>
    <input
      aria-label="number"
      class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-number rcx-input-box"
      size="1"
      type="number"
    />
  </div>
</body>
`;

exports[`[NumberInput Component] renders Disabled without crashing 1`] = `
<body>
  <div>
    <input
      aria-label="number"
      class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-number rcx-input-box"
      disabled=""
      size="1"
      type="number"
    />
  </div>
</body>
`;

exports[`[NumberInput Component] renders Invalid without crashing 1`] = `
<body>
  <div>
    <input
      aria-label="number"
      class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-number rcx-input-box"
      size="1"
      type="number"
    />
  </div>
</body>
`;

exports[`[NumberInput Component] renders States without crashing 1`] = `
<body>
  <div>
    <table
      class="rcx-box rcx-box--full rcx-css-1s3wr6b"
      style="border-collapse: collapse;"
    >
      <thead
        class="rcx-box rcx-box--full"
      >
        <tr
          class="rcx-box rcx-box--full"
        >
          <td
            aria-hidden="true"
            class="rcx-box rcx-box--full"
          />
          <th
            class="rcx-box rcx-box--full rcx-css-11in3rj"
          >
            default
          </th>
          <th
            class="rcx-box rcx-box--full rcx-css-11in3rj"
          >
            with placeholder
          </th>
          <th
            class="rcx-box rcx-box--full rcx-css-11in3rj"
          >
            with value
          </th>
          <th
            class="rcx-box rcx-box--full rcx-css-11in3rj"
          >
            with icon
          </th>
        </tr>
      </thead>
      <tbody
        class="rcx-box rcx-box--full"
      >
        <tr
          class="rcx-box rcx-box--full"
        >
          <th
            class="rcx-box rcx-box--full rcx-css-11in3rj"
          >
            default
          </th>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-number rcx-input-box"
                size="1"
                type="number"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-number rcx-input-box"
                placeholder="Placeholder"
                size="1"
                type="number"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-number rcx-input-box"
                size="1"
                type="number"
                value="1024"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <label
                class="rcx-box rcx-box--full rcx-label  rcx-box rcx-box--full rcx-box--animated rcx-input-box__wrapper"
              >
                <input
                  aria-label="number"
                  class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--undecorated rcx-input-box--type-number rcx-input-box"
                  size="1"
                  type="number"
                  value="1024"
                />
                <span
                  class="rcx-box rcx-box--full rcx-input-box__addon"
                >
                  <i
                    aria-hidden="true"
                    class="rcx-box rcx-box--full rcx-icon--name-discover rcx-icon rcx-css-4pvxx3"
                  >
                    
                  </i>
                </span>
              </label>
            </div>
          </td>
        </tr>
        <tr
          class="rcx-box rcx-box--full"
        >
          <th
            class="rcx-box rcx-box--full rcx-css-11in3rj"
          >
            hover
          </th>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-number rcx-input-box  hover"
                size="1"
                type="number"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-number rcx-input-box  hover"
                placeholder="Placeholder"
                size="1"
                type="number"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-number rcx-input-box  hover"
                size="1"
                type="number"
                value="1024"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <label
                class="rcx-box rcx-box--full rcx-label  rcx-box rcx-box--full rcx-box--animated rcx-input-box__wrapper  hover"
              >
                <input
                  aria-label="number"
                  class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--undecorated rcx-input-box--type-number rcx-input-box  hover"
                  size="1"
                  type="number"
                  value="1024"
                />
                <span
                  class="rcx-box rcx-box--full rcx-input-box__addon"
                >
                  <i
                    aria-hidden="true"
                    class="rcx-box rcx-box--full rcx-icon--name-discover rcx-icon rcx-css-4pvxx3"
                  >
                    
                  </i>
                </span>
              </label>
            </div>
          </td>
        </tr>
        <tr
          class="rcx-box rcx-box--full"
        >
          <th
            class="rcx-box rcx-box--full rcx-css-11in3rj"
          >
            active
          </th>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-number rcx-input-box  active"
                size="1"
                type="number"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-number rcx-input-box  active"
                placeholder="Placeholder"
                size="1"
                type="number"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-number rcx-input-box  active"
                size="1"
                type="number"
                value="1024"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <label
                class="rcx-box rcx-box--full rcx-label  rcx-box rcx-box--full rcx-box--animated rcx-input-box__wrapper  active"
              >
                <input
                  aria-label="number"
                  class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--undecorated rcx-input-box--type-number rcx-input-box  active"
                  size="1"
                  type="number"
                  value="1024"
                />
                <span
                  class="rcx-box rcx-box--full rcx-input-box__addon"
                >
                  <i
                    aria-hidden="true"
                    class="rcx-box rcx-box--full rcx-icon--name-discover rcx-icon rcx-css-4pvxx3"
                  >
                    
                  </i>
                </span>
              </label>
            </div>
          </td>
        </tr>
        <tr
          class="rcx-box rcx-box--full"
        >
          <th
            class="rcx-box rcx-box--full rcx-css-11in3rj"
          >
            focus
          </th>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-number rcx-input-box  focus"
                size="1"
                type="number"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-number rcx-input-box  focus"
                placeholder="Placeholder"
                size="1"
                type="number"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-number rcx-input-box  focus"
                size="1"
                type="number"
                value="1024"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <label
                class="rcx-box rcx-box--full rcx-label  rcx-box rcx-box--full rcx-box--animated rcx-input-box__wrapper  focus"
              >
                <input
                  aria-label="number"
                  class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--undecorated rcx-input-box--type-number rcx-input-box  focus"
                  size="1"
                  type="number"
                  value="1024"
                />
                <span
                  class="rcx-box rcx-box--full rcx-input-box__addon"
                >
                  <i
                    aria-hidden="true"
                    class="rcx-box rcx-box--full rcx-icon--name-discover rcx-icon rcx-css-4pvxx3"
                  >
                    
                  </i>
                </span>
              </label>
            </div>
          </td>
        </tr>
        <tr
          class="rcx-box rcx-box--full"
        >
          <th
            class="rcx-box rcx-box--full rcx-css-11in3rj"
          >
            disabled
          </th>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-number rcx-input-box"
                disabled=""
                size="1"
                type="number"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-number rcx-input-box"
                disabled=""
                placeholder="Placeholder"
                size="1"
                type="number"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-number rcx-input-box"
                disabled=""
                size="1"
                type="number"
                value="1024"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <label
                class="rcx-box rcx-box--full rcx-label  rcx-box rcx-box--full rcx-box--animated rcx-input-box__wrapper  disabled"
              >
                <input
                  aria-label="number"
                  class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--undecorated rcx-input-box--type-number rcx-input-box"
                  disabled=""
                  size="1"
                  type="number"
                  value="1024"
                />
                <span
                  class="rcx-box rcx-box--full rcx-input-box__addon"
                >
                  <i
                    aria-hidden="true"
                    class="rcx-box rcx-box--full rcx-icon--name-discover rcx-icon rcx-css-4pvxx3"
                  >
                    
                  </i>
                </span>
              </label>
            </div>
          </td>
        </tr>
        <tr
          class="rcx-box rcx-box--full"
        >
          <th
            class="rcx-box rcx-box--full rcx-css-11in3rj"
          >
            errored
          </th>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-number rcx-input-box"
                size="1"
                type="number"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-number rcx-input-box"
                placeholder="Placeholder"
                size="1"
                type="number"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-number rcx-input-box"
                size="1"
                type="number"
                value="1024"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <label
                class="rcx-box rcx-box--full rcx-label rcx-box--animated rcx-input-box__wrapper invalid"
              >
                <input
                  aria-label="number"
                  class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--undecorated rcx-input-box--type-number rcx-input-box"
                  size="1"
                  type="number"
                  value="1024"
                />
                <span
                  class="rcx-box rcx-box--full rcx-input-box__addon"
                >
                  <i
                    aria-hidden="true"
                    class="rcx-box rcx-box--full rcx-icon--name-discover rcx-icon rcx-css-4pvxx3"
                  >
                    
                  </i>
                </span>
              </label>
            </div>
          </td>
        </tr>
        <tr
          class="rcx-box rcx-box--full"
        >
          <th
            class="rcx-box rcx-box--full rcx-css-11in3rj"
          >
            errored + hover
          </th>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-number rcx-input-box  hover"
                size="1"
                type="number"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-number rcx-input-box  hover"
                placeholder="Placeholder"
                size="1"
                type="number"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-number rcx-input-box  hover"
                size="1"
                type="number"
                value="1024"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <label
                class="rcx-box rcx-box--full rcx-label rcx-box--animated rcx-input-box__wrapper hover invalid"
              >
                <input
                  aria-label="number"
                  class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--undecorated rcx-input-box--type-number rcx-input-box  hover"
                  size="1"
                  type="number"
                  value="1024"
                />
                <span
                  class="rcx-box rcx-box--full rcx-input-box__addon"
                >
                  <i
                    aria-hidden="true"
                    class="rcx-box rcx-box--full rcx-icon--name-discover rcx-icon rcx-css-4pvxx3"
                  >
                    
                  </i>
                </span>
              </label>
            </div>
          </td>
        </tr>
        <tr
          class="rcx-box rcx-box--full"
        >
          <th
            class="rcx-box rcx-box--full rcx-css-11in3rj"
          >
            errored + active
          </th>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-number rcx-input-box  active"
                size="1"
                type="number"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-number rcx-input-box  active"
                placeholder="Placeholder"
                size="1"
                type="number"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-number rcx-input-box  active"
                size="1"
                type="number"
                value="1024"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <label
                class="rcx-box rcx-box--full rcx-label rcx-box--animated rcx-input-box__wrapper active invalid"
              >
                <input
                  aria-label="number"
                  class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--undecorated rcx-input-box--type-number rcx-input-box  active"
                  size="1"
                  type="number"
                  value="1024"
                />
                <span
                  class="rcx-box rcx-box--full rcx-input-box__addon"
                >
                  <i
                    aria-hidden="true"
                    class="rcx-box rcx-box--full rcx-icon--name-discover rcx-icon rcx-css-4pvxx3"
                  >
                    
                  </i>
                </span>
              </label>
            </div>
          </td>
        </tr>
        <tr
          class="rcx-box rcx-box--full"
        >
          <th
            class="rcx-box rcx-box--full rcx-css-11in3rj"
          >
            errored + focus
          </th>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-number rcx-input-box  focus"
                size="1"
                type="number"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-number rcx-input-box  focus"
                placeholder="Placeholder"
                size="1"
                type="number"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-number rcx-input-box  focus"
                size="1"
                type="number"
                value="1024"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <label
                class="rcx-box rcx-box--full rcx-label rcx-box--animated rcx-input-box__wrapper focus invalid"
              >
                <input
                  aria-label="number"
                  class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--undecorated rcx-input-box--type-number rcx-input-box  focus"
                  size="1"
                  type="number"
                  value="1024"
                />
                <span
                  class="rcx-box rcx-box--full rcx-input-box__addon"
                >
                  <i
                    aria-hidden="true"
                    class="rcx-box rcx-box--full rcx-icon--name-discover rcx-icon rcx-css-4pvxx3"
                  >
                    
                  </i>
                </span>
              </label>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
    <table
      class="rcx-box rcx-box--full rcx-css-1s3wr6b"
      style="border-collapse: collapse;"
    >
      <thead
        class="rcx-box rcx-box--full"
      >
        <tr
          class="rcx-box rcx-box--full"
        >
          <td
            aria-hidden="true"
            class="rcx-box rcx-box--full"
          />
          <th
            class="rcx-box rcx-box--full rcx-css-11in3rj"
          >
            small
          </th>
          <th
            class="rcx-box rcx-box--full rcx-css-11in3rj"
          >
            with placeholder
          </th>
          <th
            class="rcx-box rcx-box--full rcx-css-11in3rj"
          >
            with value
          </th>
          <th
            class="rcx-box rcx-box--full rcx-css-11in3rj"
          >
            with icon
          </th>
        </tr>
      </thead>
      <tbody
        class="rcx-box rcx-box--full"
      >
        <tr
          class="rcx-box rcx-box--full"
        >
          <th
            class="rcx-box rcx-box--full rcx-css-11in3rj"
          >
            small
          </th>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--small rcx-input-box--type-number rcx-input-box"
                size="1"
                type="number"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--small rcx-input-box--type-number rcx-input-box"
                placeholder="Placeholder"
                size="1"
                type="number"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--small rcx-input-box--type-number rcx-input-box"
                size="1"
                type="number"
                value="1024"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <label
                class="rcx-box rcx-box--full rcx-label  rcx-box rcx-box--full rcx-box--animated rcx-input-box__wrapper"
              >
                <input
                  aria-label="number"
                  class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--small rcx-input-box--undecorated rcx-input-box--type-number rcx-input-box"
                  size="1"
                  type="number"
                  value="1024"
                />
                <span
                  class="rcx-box rcx-box--full rcx-input-box__addon"
                >
                  <i
                    aria-hidden="true"
                    class="rcx-box rcx-box--full rcx-icon--name-discover rcx-icon rcx-css-4pvxx3"
                  >
                    
                  </i>
                </span>
              </label>
            </div>
          </td>
        </tr>
        <tr
          class="rcx-box rcx-box--full"
        >
          <th
            class="rcx-box rcx-box--full rcx-css-11in3rj"
          >
            hover
          </th>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--small rcx-input-box--type-number rcx-input-box  hover"
                size="1"
                type="number"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--small rcx-input-box--type-number rcx-input-box  hover"
                placeholder="Placeholder"
                size="1"
                type="number"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--small rcx-input-box--type-number rcx-input-box  hover"
                size="1"
                type="number"
                value="1024"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <label
                class="rcx-box rcx-box--full rcx-label  rcx-box rcx-box--full rcx-box--animated rcx-input-box__wrapper  hover"
              >
                <input
                  aria-label="number"
                  class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--small rcx-input-box--undecorated rcx-input-box--type-number rcx-input-box  hover"
                  size="1"
                  type="number"
                  value="1024"
                />
                <span
                  class="rcx-box rcx-box--full rcx-input-box__addon"
                >
                  <i
                    aria-hidden="true"
                    class="rcx-box rcx-box--full rcx-icon--name-discover rcx-icon rcx-css-4pvxx3"
                  >
                    
                  </i>
                </span>
              </label>
            </div>
          </td>
        </tr>
        <tr
          class="rcx-box rcx-box--full"
        >
          <th
            class="rcx-box rcx-box--full rcx-css-11in3rj"
          >
            active
          </th>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--small rcx-input-box--type-number rcx-input-box  active"
                size="1"
                type="number"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--small rcx-input-box--type-number rcx-input-box  active"
                placeholder="Placeholder"
                size="1"
                type="number"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--small rcx-input-box--type-number rcx-input-box  active"
                size="1"
                type="number"
                value="1024"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <label
                class="rcx-box rcx-box--full rcx-label  rcx-box rcx-box--full rcx-box--animated rcx-input-box__wrapper  active"
              >
                <input
                  aria-label="number"
                  class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--small rcx-input-box--undecorated rcx-input-box--type-number rcx-input-box  active"
                  size="1"
                  type="number"
                  value="1024"
                />
                <span
                  class="rcx-box rcx-box--full rcx-input-box__addon"
                >
                  <i
                    aria-hidden="true"
                    class="rcx-box rcx-box--full rcx-icon--name-discover rcx-icon rcx-css-4pvxx3"
                  >
                    
                  </i>
                </span>
              </label>
            </div>
          </td>
        </tr>
        <tr
          class="rcx-box rcx-box--full"
        >
          <th
            class="rcx-box rcx-box--full rcx-css-11in3rj"
          >
            focus
          </th>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--small rcx-input-box--type-number rcx-input-box  focus"
                size="1"
                type="number"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--small rcx-input-box--type-number rcx-input-box  focus"
                placeholder="Placeholder"
                size="1"
                type="number"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--small rcx-input-box--type-number rcx-input-box  focus"
                size="1"
                type="number"
                value="1024"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <label
                class="rcx-box rcx-box--full rcx-label  rcx-box rcx-box--full rcx-box--animated rcx-input-box__wrapper  focus"
              >
                <input
                  aria-label="number"
                  class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--small rcx-input-box--undecorated rcx-input-box--type-number rcx-input-box  focus"
                  size="1"
                  type="number"
                  value="1024"
                />
                <span
                  class="rcx-box rcx-box--full rcx-input-box__addon"
                >
                  <i
                    aria-hidden="true"
                    class="rcx-box rcx-box--full rcx-icon--name-discover rcx-icon rcx-css-4pvxx3"
                  >
                    
                  </i>
                </span>
              </label>
            </div>
          </td>
        </tr>
        <tr
          class="rcx-box rcx-box--full"
        >
          <th
            class="rcx-box rcx-box--full rcx-css-11in3rj"
          >
            disabled
          </th>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--small rcx-input-box--type-number rcx-input-box"
                disabled=""
                size="1"
                type="number"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--small rcx-input-box--type-number rcx-input-box"
                disabled=""
                placeholder="Placeholder"
                size="1"
                type="number"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--small rcx-input-box--type-number rcx-input-box"
                disabled=""
                size="1"
                type="number"
                value="1024"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <label
                class="rcx-box rcx-box--full rcx-label  rcx-box rcx-box--full rcx-box--animated rcx-input-box__wrapper  disabled"
              >
                <input
                  aria-label="number"
                  class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--small rcx-input-box--undecorated rcx-input-box--type-number rcx-input-box"
                  disabled=""
                  size="1"
                  type="number"
                  value="1024"
                />
                <span
                  class="rcx-box rcx-box--full rcx-input-box__addon"
                >
                  <i
                    aria-hidden="true"
                    class="rcx-box rcx-box--full rcx-icon--name-discover rcx-icon rcx-css-4pvxx3"
                  >
                    
                  </i>
                </span>
              </label>
            </div>
          </td>
        </tr>
        <tr
          class="rcx-box rcx-box--full"
        >
          <th
            class="rcx-box rcx-box--full rcx-css-11in3rj"
          >
            errored
          </th>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--small rcx-input-box--type-number rcx-input-box"
                size="1"
                type="number"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--small rcx-input-box--type-number rcx-input-box"
                placeholder="Placeholder"
                size="1"
                type="number"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--small rcx-input-box--type-number rcx-input-box"
                size="1"
                type="number"
                value="1024"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <label
                class="rcx-box rcx-box--full rcx-label rcx-box--animated rcx-input-box__wrapper invalid"
              >
                <input
                  aria-label="number"
                  class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--small rcx-input-box--undecorated rcx-input-box--type-number rcx-input-box"
                  size="1"
                  type="number"
                  value="1024"
                />
                <span
                  class="rcx-box rcx-box--full rcx-input-box__addon"
                >
                  <i
                    aria-hidden="true"
                    class="rcx-box rcx-box--full rcx-icon--name-discover rcx-icon rcx-css-4pvxx3"
                  >
                    
                  </i>
                </span>
              </label>
            </div>
          </td>
        </tr>
        <tr
          class="rcx-box rcx-box--full"
        >
          <th
            class="rcx-box rcx-box--full rcx-css-11in3rj"
          >
            errored + hover
          </th>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--small rcx-input-box--type-number rcx-input-box  hover"
                size="1"
                type="number"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--small rcx-input-box--type-number rcx-input-box  hover"
                placeholder="Placeholder"
                size="1"
                type="number"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--small rcx-input-box--type-number rcx-input-box  hover"
                size="1"
                type="number"
                value="1024"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <label
                class="rcx-box rcx-box--full rcx-label rcx-box--animated rcx-input-box__wrapper hover invalid"
              >
                <input
                  aria-label="number"
                  class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--small rcx-input-box--undecorated rcx-input-box--type-number rcx-input-box  hover"
                  size="1"
                  type="number"
                  value="1024"
                />
                <span
                  class="rcx-box rcx-box--full rcx-input-box__addon"
                >
                  <i
                    aria-hidden="true"
                    class="rcx-box rcx-box--full rcx-icon--name-discover rcx-icon rcx-css-4pvxx3"
                  >
                    
                  </i>
                </span>
              </label>
            </div>
          </td>
        </tr>
        <tr
          class="rcx-box rcx-box--full"
        >
          <th
            class="rcx-box rcx-box--full rcx-css-11in3rj"
          >
            errored + active
          </th>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--small rcx-input-box--type-number rcx-input-box  active"
                size="1"
                type="number"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--small rcx-input-box--type-number rcx-input-box  active"
                placeholder="Placeholder"
                size="1"
                type="number"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--small rcx-input-box--type-number rcx-input-box  active"
                size="1"
                type="number"
                value="1024"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <label
                class="rcx-box rcx-box--full rcx-label rcx-box--animated rcx-input-box__wrapper active invalid"
              >
                <input
                  aria-label="number"
                  class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--small rcx-input-box--undecorated rcx-input-box--type-number rcx-input-box  active"
                  size="1"
                  type="number"
                  value="1024"
                />
                <span
                  class="rcx-box rcx-box--full rcx-input-box__addon"
                >
                  <i
                    aria-hidden="true"
                    class="rcx-box rcx-box--full rcx-icon--name-discover rcx-icon rcx-css-4pvxx3"
                  >
                    
                  </i>
                </span>
              </label>
            </div>
          </td>
        </tr>
        <tr
          class="rcx-box rcx-box--full"
        >
          <th
            class="rcx-box rcx-box--full rcx-css-11in3rj"
          >
            errored + focus
          </th>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--small rcx-input-box--type-number rcx-input-box  focus"
                size="1"
                type="number"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--small rcx-input-box--type-number rcx-input-box  focus"
                placeholder="Placeholder"
                size="1"
                type="number"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <input
                aria-label="number"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--small rcx-input-box--type-number rcx-input-box  focus"
                size="1"
                type="number"
                value="1024"
              />
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-7rd89h"
            >
              <label
                class="rcx-box rcx-box--full rcx-label rcx-box--animated rcx-input-box__wrapper focus invalid"
              >
                <input
                  aria-label="number"
                  class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--small rcx-input-box--undecorated rcx-input-box--type-number rcx-input-box  focus"
                  size="1"
                  type="number"
                  value="1024"
                />
                <span
                  class="rcx-box rcx-box--full rcx-input-box__addon"
                >
                  <i
                    aria-hidden="true"
                    class="rcx-box rcx-box--full rcx-icon--name-discover rcx-icon rcx-css-4pvxx3"
                  >
                    
                  </i>
                </span>
              </label>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</body>
`;

exports[`[NumberInput Component] renders WithIconAddon without crashing 1`] = `
<body>
  <div>
    <label
      class="rcx-box rcx-box--full rcx-label  rcx-box rcx-box--full rcx-box--animated rcx-input-box__wrapper"
    >
      <input
        aria-label="number"
        class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--undecorated rcx-input-box--type-number rcx-input-box"
        size="1"
        type="number"
      />
      <span
        class="rcx-box rcx-box--full rcx-input-box__addon"
      >
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-send rcx-icon rcx-css-4pvxx3"
        >
          〈
        </i>
      </span>
    </label>
  </div>
</body>
`;

exports[`[NumberInput Component] renders WithPlaceholder without crashing 1`] = `
<body>
  <div>
    <input
      aria-label="number"
      class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-number rcx-input-box"
      size="1"
      type="number"
      value="1024"
    />
  </div>
</body>
`;
